# text-adventure

./: Cargo.toml  README.md
src/: changelog.txt  characters.rs  def.rs  entitys.rs  item.rs  main.rs  scene.rs  stats.rs  test.rs  updatelog.txt
src/characters/: def.rs  player_character.rs
src/damage_types/: damage_mod.rs
src/entitys/: create_entity.rs  entity.rs  player_character.rs
src/item/: consumable.rs  def.rs  held_item.rs  wearable.rs
src/lib/: all_scenes.rs  area.rs  damage_types.rs  def.rs  entitys.rs  gamestate.rs  history.rs  item.rs  lib.rs  map.rs  spells.rs  test.rs
src/lib/all_scenes/: all_scenes.rs
src/lib/area/: all_rooms.rs  def.rs  first_room.rs
src/lib/damage_types/: damage_mod.rs
src/lib/entitys/: create_entity.rs  def.rs  dialogue.rs  entity.rs  npc_interaction.rs  npcs.rs  player_character.rs
src/lib/gamestate/: def.rs  default_sate.rs  default_state.rs  new_game.rs
src/lib/history/: history.rs  movement.rs
src/lib/item/: consumable.rs  def.rs  descriptions.rs  held_item.rs  interactable.rs  intercatable_items.rs  item_interaction.rs  wearable.rs
src/lib/map/: def.rs  map.rs  movement.rs
src/lib/spells/: cast_spell.rs  spells.rs
src/scene/: all_scenes.rs  first_scene.rs  play_game.rs
src/stats/: character_stats.rs  damage_mod.rs
src/test/: test.rs
