[package]
name = "text-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "text-adventure"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"
[dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3